# wgsl-wasm-transpiler

./: .gitignore  Cargo.toml  Makefile  README.md  WASM_INTEGRATION.md  build-wasm.sh  multi_stage.glsl  multi_stage.hlsl  multi_stage.metal  multi_stage.spv  multi_stage.wgsl  optimization_test.glsl  optimization_test.hlsl  optimization_test.metal  optimization_test.spv  optimization_test.wgsl  package.json  serve.py  simple.glsl  simple.hlsl  simple.metal  simple.spv  simple.wgsl  test-all.sh  triangle.hlsl
docs/: OPTIMIZATION_ANALYSIS.md  README.md  SUMMARY.md
examples/: multi_stage.wgsl  nodejs-example.js  optimization_test.wgsl  triangle.glsl  usage.js  web-example.html
scripts/: build-wasm.sh  install.sh  serve.py  test-all.sh  test_runner.sh
src/: lib.rs  main.rs
tests/: integration_test.rs
